tests/errors/field-borrow-assign.ari
struct Pair {
  mut left: i64,
  mut right: i64,
}

fn main() -> i64 {
  var pair = Pair { left: 1, right: 2 };
  let left_ref = ref pair.left;
  pair.left = 3;
  return pair.right;
}
